hphp/hack/test/typecheck/new_inference/eager_solve/apply_with_invoke.php.like_types.exp
File "apply_with_invoke.php", line 15, characters 11-26:
Invalid argument (Typing[4110])
File "apply_with_invoke.php", line 9, characters 25-43:
Expected ~(function(~<expr#1>): void) because it is an unenforceable type
File "apply_with_invoke.php", line 15, characters 11-26:
But got (function(~<expr#1> $d): ~void)
File "apply_with_invoke.php", line 16, characters 11-26:
Invalid argument (Typing[4110])
File "apply_with_invoke.php", line 11, characters 22-40:
Expected ~(function(~<expr#1>): void) because it is an unenforceable type
File "apply_with_invoke.php", line 16, characters 11-26:
But got (function(~<expr#1> $d): ~void)
